tests/ui-tests/tests/cases/flatten-fail.stderr
error[E0277]: the trait bound `std::option::Option<Vec<std::option::Option<std::string::String>>>: FlattensInto<Vec<i32>>` is not satisfied
 --> tests/cases/flatten-fail.rs:8:20
  |
8 |     producers_one: Vec<i32>,
  |                    ^^^ the trait `FlattensInto<Vec<i32>>` is not implemented for `std::option::Option<Vec<std::option::Option<std::string::String>>>`
  |
  = help: the following other types implement trait `FlattensInto<T>`:
            `std::option::Option<Vec<T>>` implements `FlattensInto<Vec<T>>`
            `std::option::Option<Vec<std::option::Option<T>>>` implements `FlattensInto<Vec<T>>`
            `std::option::Option<Vec<std::option::Option<T>>>` implements `FlattensInto<std::option::Option<Vec<T>>>`
note: required by a bound in `SelectionBuilder::<'a, SchemaType, VariablesFields>::select_flattened_field`
 --> $WORKSPACE/cynic/src/queries/builders.rs
  |
  |     pub fn select_flattened_field<FieldMarker, Flattened, FieldType>(
  |            ---------------------- required by a bound in this associated function
...
  |         FieldType: FlattensInto<Flattened>,
  |                    ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SelectionBuilder::<'a, SchemaType, VariablesFields>::select_flattened_field`

error[E0277]: the trait bound `std::option::Option<Vec<std::option::Option<std::string::String>>>: FlattensInto<std::option::Option<Vec<f64>>>` is not satisfied
  --> tests/cases/flatten-fail.rs:11:20
   |
11 |     producers_two: Option<Vec<f64>>,
   |                    ^^^^^^ unsatisfied trait bound
   |
   = help: the trait `FlattensInto<std::option::Option<Vec<f64>>>` is not implemented for `std::option::Option<Vec<std::option::Option<std::string::String>>>`
   = help: the following other types implement trait `FlattensInto<T>`:
             `std::option::Option<Vec<T>>` implements `FlattensInto<Vec<T>>`
             `std::option::Option<Vec<std::option::Option<T>>>` implements `FlattensInto<Vec<T>>`
             `std::option::Option<Vec<std::option::Option<T>>>` implements `FlattensInto<std::option::Option<Vec<T>>>`
note: required by a bound in `SelectionBuilder::<'a, SchemaType, VariablesFields>::select_flattened_field`
  --> $WORKSPACE/cynic/src/queries/builders.rs
   |
   |     pub fn select_flattened_field<FieldMarker, Flattened, FieldType>(
   |            ---------------------- required by a bound in this associated function
...
   |         FieldType: FlattensInto<Flattened>,
   |                    ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SelectionBuilder::<'a, SchemaType, VariablesFields>::select_flattened_field`

error[E0277]: the trait bound `std::option::Option<Vec<std::option::Option<schema::FilmCharactersEdge>>>: FlattensInto<Vec<std::string::String>>` is not satisfied
  --> tests/cases/flatten-fail.rs:19:16
   |
19 |     edges_one: Vec<String>,
   |                ^^^ unsatisfied trait bound
   |
   = help: the trait `FlattensInto<Vec<std::string::String>>` is not implemented for `std::option::Option<Vec<std::option::Option<schema::FilmCharactersEdge>>>`
   = help: the following other types implement trait `FlattensInto<T>`:
             `std::option::Option<Vec<T>>` implements `FlattensInto<Vec<T>>`
             `std::option::Option<Vec<std::option::Option<T>>>` implements `FlattensInto<Vec<T>>`
             `std::option::Option<Vec<std::option::Option<T>>>` implements `FlattensInto<std::option::Option<Vec<T>>>`
note: required by a bound in `SelectionBuilder::<'a, SchemaType, VariablesFields>::select_flattened_field`
  --> $WORKSPACE/cynic/src/queries/builders.rs
   |
   |     pub fn select_flattened_field<FieldMarker, Flattened, FieldType>(
   |            ---------------------- required by a bound in this associated function
...
   |         FieldType: FlattensInto<Flattened>,
   |                    ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SelectionBuilder::<'a, SchemaType, VariablesFields>::select_flattened_field`
